force-app/main/default/objects/Timesheet_Entry__c/Timesheet_Entry__c.object-meta.xml
<CustomObject>
    <description>Individual time entry within a Timesheet. Records hours, project, and category for a specific date.</description>
    <label>Timesheet Entry</label>
    <nameField>
        <displayFormat>TE-{0000}</displayFormat>
        <label>Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>