force-app/main/default/objects/Timesheet_Entry__c/fields/Is_Billable__c.field-meta.xml
<CustomField>
    <fullName>Is_Billable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this time entry is billable to the client</description>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>