force-app/main/default/objects/Timesheet_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Hours__c</columns>
    <columns>Category__c</columns>
    <columns>Timesheet__c</columns>
    <columns>Is_Billable__c</columns>
    <columns>Entry_Date__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>